Bug 92166 - Crash after exiting source code mode in Writer Web
Summary: Crash after exiting source code mode in Writer Web
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other All
: highest critical
Assignee: Michael Meeks
URL:
Whiteboard: target:5.1.0 target:5.0.0.2
Keywords: haveBacktrace
Depends on:
Blocks: VclPtr
  Show dependency treegraph
 
Reported: 2015-06-18 21:59 UTC by Yousuf Philips (jay) (retired)
Modified: 2016-10-25 19:23 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
backtrace (18.82 KB, text/plain)
2015-06-18 21:59 UTC, Yousuf Philips (jay) (retired)
Details
console+bt with debug symbols (7.89 KB, text/plain)
2015-06-20 07:17 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2015-06-18 21:59:03 UTC
Created attachment 116638 [details]
backtrace

Steps:
1) Open Writer Web
2) Add some text
3) Activate html source view and save html
4) Deactivate html source view
5) Click in the interface
6) Crash

Version: 5.1.0.0.alpha1+
Build ID: 9ef671364ff9fbb552a5433053af9283d12d90c7
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2015-06-16_08:47:30
Comment 1 Buovjaga 2015-06-19 19:52:57 UTC
Reproduced crash.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: 437210d58f32177ef1829d704f7f4d2f1bbfbfdd
TinderBox: Win-x86@39, Branch:master, Time: 2015-06-18_07:21:56
Locale: fi-FI (fi_FI)
Comment 2 Julien Nabet 2015-06-20 07:17:37 UTC
Created attachment 116671 [details]
console+bt with debug symbols

On pc Debian x86-64 with master sources updated yesterday, I could reproduce this.
I attached console logs and bt
Comment 3 Michael Meeks 2015-06-20 11:22:46 UTC
Thanks - looks like a post-dispose silly =)
Comment 4 Michael Meeks 2015-06-20 11:41:46 UTC
Nailed this, and another issue wrt. bogusly switching back to the source view related to a missing dispose. Just queued up in the CI:

https://gerrit.libreoffice.org/16384

Thanks !
Comment 5 Commit Notification 2015-06-20 13:43:36 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dd095d3f1ae2b71fdff8b2d2c497d550d8ac5f28

tdf#92166 - dispose the SwSrcEditWindow properly.

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2015-06-20 13:53:38 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ffc08eac223211d3ca2d4ebadb9ccb8e26d22a5e&h=libreoffice-5-0

tdf#92166 - dispose the SwSrcEditWindow properly.

It will be available in 5.0.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.