tdf#92166 - dispose the SwSrcEditWindow properly.

Also improve dispose method to cleanup various pointers.
Also avoid crash on post dispose MouseUp event.

Change-Id: Ic337a8306566d5b5c81b939be6f89f34fbcc5847